nivasa-macros/tests/trybuild/subscribe_message_invalid_interceptor_marker.stderr
error: invalid interceptor marker
 --> tests/trybuild/subscribe_message_invalid_interceptor_marker.rs:6:5
  |
6 |     /// nivasa-interceptor:
  |     ^^^^^^^^^^^^^^^^^^^^^^^
